@@ -66,6 +66,8 @@ cupt (2.9.0~) UNRELEASED; urgency=medium
         StringRange.
     - cache/relation:
       - [ABI break] Relation: new member 'architecture'.
+    - cache:
+      - [API break] PinnedVersion: renamed to VersionWithPriority.
   * doc:
     - cmakelists:
       - Added rules building man pages from PODs.
